[gd_scene load_steps=10 format=3 uid="uid://tgwdd8qoj461"]

[ext_resource type="FontFile" uid="uid://cngwhad1f7egh" path="res://assets/fonts/Minecraft.ttf" id="1_rtnku"]
[ext_resource type="Script" uid="uid://k58r7lesuxki" path="res://scenes/settings_window.gd" id="2_etmii"]
[ext_resource type="Texture2D" uid="uid://bbc73voee5j1k" path="res://assets/sprites/ui/minus32.png" id="2_pyh1h"]
[ext_resource type="Texture2D" uid="uid://b2p8hlvq4arau" path="res://assets/sprites/ui/plus32.png" id="3_bn7f2"]
[ext_resource type="Texture2D" uid="uid://dw4h4dlb3r4yn" path="res://assets/sprites/ui/checkbox-bg32.png" id="4_3f8js"]
[ext_resource type="Texture2D" uid="uid://b8hqhnx6nqdhv" path="res://assets/sprites/ui/checkbox-fg32.png" id="5_etmii"]

[sub_resource type="LabelSettings" id="LabelSettings_pyh1h"]
font = ExtResource("1_rtnku")
font_size = 32
font_color = Color(0.25882354, 0.7411765, 0.25490198, 1)
outline_size = 8
outline_color = Color(0.12941177, 0.12941177, 0.12941177, 1)
shadow_size = 0

[sub_resource type="LabelSettings" id="LabelSettings_h77l5"]
font = ExtResource("1_rtnku")
font_size = 32
font_color = Color(0.25882354, 0.7411765, 0.25490198, 1)
outline_size = 8
outline_color = Color(0.12941177, 0.12941177, 0.12941177, 1)

[sub_resource type="GDScript" id="GDScript_30fdw"]
script/source = "extends Button


@onready var texture_rect: TextureRect = $BorderlessIcon


func _on_pressed() -> void:
	texture_rect.visible = !texture_rect.visible
	ConfigManager.set_borderless(texture_rect.visible)
"

[node name="SettingsWindow" type="Window"]
oversampling_override = 1.0
title = "Bengi Box Settings"
initial_position = 4
size = Vector2i(640, 480)
minimize_disabled = true
maximize_disabled = true
theme_override_constants/title_outline_size = 8
theme_override_fonts/title_font = ExtResource("1_rtnku")
theme_override_font_sizes/title_font_size = 16
script = ExtResource("2_etmii")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.12941177, 0.12941177, 0.12941177, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control/ColorRect/HBoxContainer"]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
color = Color(0.24313726, 0.15294118, 0.13725491, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/ColorRect/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control/ColorRect/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
color = Color(0.24313726, 0.15294118, 0.13725491, 1)

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/Control/ColorRect/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control/ColorRect/HBoxContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/ColorRect/HBoxContainer/VBoxContainer/ScrollContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/ColorRect/HBoxContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="CanvasLayer/Control/ColorRect/HBoxContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Work duration:"
label_settings = SubResource("LabelSettings_pyh1h")
vertical_alignment = 1

[node name="WorkTimeMinusBtn" type="Button" parent="CanvasLayer/Control/ColorRect/HBoxContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
icon = ExtResource("2_pyh1h")
flat = true

[node name="WorkTimeLabel" type="Label" parent="CanvasLayer/Control/ColorRect/HBoxContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(72, 0)
layout_mode = 2
size_flags_vertical = 1
text = "25"
label_settings = SubResource("LabelSettings_h77l5")
horizontal_alignment = 1
vertical_alignment = 2

[node name="WorkTimePlusBtn" type="Button" parent="CanvasLayer/Control/ColorRect/HBoxContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
icon = ExtResource("3_bn7f2")
flat = true

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/Control/ColorRect/HBoxContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="CanvasLayer/Control/ColorRect/HBoxContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Rest duration:"
label_settings = SubResource("LabelSettings_pyh1h")
vertical_alignment = 1

[node name="RestTimeMinusBtn" type="Button" parent="CanvasLayer/Control/ColorRect/HBoxContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
icon = ExtResource("2_pyh1h")
flat = true

[node name="RestTimeLabel" type="Label" parent="CanvasLayer/Control/ColorRect/HBoxContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(72, 0)
layout_mode = 2
size_flags_vertical = 1
text = "25"
label_settings = SubResource("LabelSettings_h77l5")
horizontal_alignment = 1
vertical_alignment = 2

[node name="RestTimePlusBtn" type="Button" parent="CanvasLayer/Control/ColorRect/HBoxContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
icon = ExtResource("3_bn7f2")
flat = true

[node name="HBoxContainer3" type="HBoxContainer" parent="CanvasLayer/Control/ColorRect/HBoxContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="CanvasLayer/Control/ColorRect/HBoxContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
text = "Borderless"
label_settings = SubResource("LabelSettings_pyh1h")
vertical_alignment = 1

[node name="Button" type="Button" parent="CanvasLayer/Control/ColorRect/HBoxContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
focus_mode = 0
icon = ExtResource("4_3f8js")
flat = true
script = SubResource("GDScript_30fdw")

[node name="BorderlessIcon" type="TextureRect" parent="CanvasLayer/Control/ColorRect/HBoxContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer3/Button"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("5_etmii")
stretch_mode = 2

[node name="ColorRect2" type="ColorRect" parent="CanvasLayer/Control/ColorRect/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
color = Color(0.24313726, 0.15294118, 0.13725491, 1)

[node name="ColorRect2" type="ColorRect" parent="CanvasLayer/Control/ColorRect/HBoxContainer"]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
color = Color(0.24313726, 0.15294118, 0.13725491, 1)

[connection signal="pressed" from="CanvasLayer/Control/ColorRect/HBoxContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer/WorkTimeMinusBtn" to="." method="_on_work_time_minus_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/ColorRect/HBoxContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer/WorkTimePlusBtn" to="." method="_on_work_time_plus_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/ColorRect/HBoxContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer2/RestTimeMinusBtn" to="." method="_on_rest_time_minus_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/ColorRect/HBoxContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer2/RestTimePlusBtn" to="." method="_on_rest_time_plus_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/ColorRect/HBoxContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer3/Button" to="CanvasLayer/Control/ColorRect/HBoxContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer3/Button" method="_on_pressed"]
